@@ -52,15 +52,17 @@ public abstract class IncrementalGrowth<T extends Particle, U extends Crystal<T>
         double timeSinceLast = model.getTime() - lastNewCrystalFormationTime;
 
         //If there is no water, move particles quickly toward each other to form crystals since there should be no free ions
-        if ( model.waterVolume.get() == 0 ) {
-            towardNewCrystal( dt * 10 );
-        }
+        //TODO: this seems unnecessary after reducing the jump radius for joining existing crystals
+//        if ( model.waterVolume.get() < Units.litersToMetersCubed( 0.05E-23 ) ) {
+//            towardNewCrystal( dt * 10 );
+//        }
 
         //Make sure at least 1 second has passed, then convert to crystals
-        else if ( saturated.get() && timeSinceLast > 1 && crystals.size() == 0 ) {
+//        else
+        if ( saturated.get() && timeSinceLast > 1 && crystals.size() == 0 ) {
 
             //Create a crystal if there weren't any
-            debug( "No crystals, starting a new one" );
+            debug( "No crystals, starting a new one, num crystals = " + crystals.size() );
             towardNewCrystal( dt );
         }
 
@@ -77,14 +79,15 @@ public abstract class IncrementalGrowth<T extends Particle, U extends Crystal<T>
                 //Find a matching particle nearby one of the sites and join it together
                 CrystallizationMatch<T> match = matches.get( 0 );
 
-                //With 1% chance, form a new crystal anyways (if there aren't too many crystals)
-                if ( random.nextDouble() > 0.99 && crystals.size() <= 2 ) {
+                //With some probability, form a new crystal anyways (if there aren't too many crystals)
+                if ( random.nextDouble() > 0.8 && crystals.size() <= 2 ) {
                     debug( "Random choice to form new crystal instead of joining another" );
                     towardNewCrystal( dt );
                 }
 
-                //If close enough, join the lattice
-                else if ( match.distance <= FREE_PARTICLE_SPEED * dt ) {
+                //If close enough, join the lattice.  Having a large factor here makes it possible for particles to jump on to crystals quickly
+                //And fixes many problems in crystallization, including large or unbalanced concentrations
+                else if ( match.distance <= FREE_PARTICLE_SPEED * dt * 100 ) {
 
                     //Remove the particle from the list of free particles
                     model.freeParticles.remove( match.particle );
@@ -94,12 +97,12 @@ public abstract class IncrementalGrowth<T extends Particle, U extends Crystal<T>
                 }
 
                 //Otherwise, move closest particle toward the lattice
-                else if ( match.distance <= model.beaker.getWidth() / 8 ) {
+                else if ( match.distance <= model.beaker.getWidth() / 2 ) {
                     match.particle.velocity.set( match.site.absolutePosition.minus( match.particle.getPosition() ).getInstanceOfMagnitude( FREE_PARTICLE_SPEED ) );
                 }
 
                 else {
-                    debug( "Best match was too far away (" + match.distance / model.beaker.getWidth() + " beaker widths, so starting a new crystal with a random particle" );
+                    debug( "Best match was too far away (" + match.distance / model.beaker.getWidth() + " beaker widths, so trying to form new crystal from lone ions" );
                     towardNewCrystal( dt );
                 }
             }
@@ -133,7 +136,9 @@ public abstract class IncrementalGrowth<T extends Particle, U extends Crystal<T>
 
         for ( Particle freeParticle : particlesToConsider ) {
             for ( OpenSite<T> openSite : crystal.getOpenSites() ) {
-                if ( model.solution.shape.get().contains( openSite.shape.getBounds2D() ) && openSite.matches( freeParticle ) ) {
+                if (
+//                        model.solution.shape.get().contains( openSite.shape.getBounds2D() ) &&
+                        openSite.matches( freeParticle ) ) {
                     matches.add( new CrystallizationMatch<T>( (T) freeParticle, openSite ) );
                 }
             }
